--- a/everest.html
+++ b/everest.html
@@ -126,8 +126,10 @@
 					
 				</div>
 			</section>
-			<section class="middle_section">
+			<section class="middle_section clearfix">
+				<aside class="right"></aside>
 				<div class="content">
+
 					<div class="toor1">
 						<div class="toor_content">
 							<div class="teaser">
@@ -188,12 +190,102 @@
 								<span>/ per night</span>
 								<a href="#">Book room</a>
 							</div>
+						</div>
 					</div>
 				</div>
-				<aside class="left"></aside>
-			</section>
+				<div class="content">
+					<div class="toor1">
+						<div class="toor_image">
+							<img src="img/home_greece.jpg" alt="greece">
+						</div>
+						<div class="signUp">
+							<h3>Join the Newsletter</h3>
+							<span>Sign up for the newsletter</span>
+							<form action="" class="signUp_form">
+								<input class="signUp_addres" type="text" value="Your E-Mail..">
+								<input class="signUp_addres_submit"type="submit" value="Sing Up">
+							</form>
+						</div>
+					</div>
+					<div class="toor2">
+						<div class="toor_content">
+							<div class="favorit"></div>
+							<h4>Our Best Deals</h4>
+							<div class="deal clearfix">
+								<div class="left">
+									<img src="img/home_newyork.jpg" alt="">
+								</div>
+								<div class="right">
+									<h4>New York City</h4>
+									<div class="rate">
+										<i class="fa fa-icon-star icon-color"></i>
+										<i class="fa fa-icon-star icon-color"></i>
+										<i class="fa fa-icon-star icon-color"></i>
+										<i class="fa fa-icon-star icon-color"></i>
+										<i class="fa fa-icon-star icon-color-muted"></i>
+									</div>
+									<div class="deal_prise">
+										<a href="" class="prise_link">$299</a>
+										<span>/ per night</span>
+									</div>
+								</div>
+							</div>
+							<div class="deal clearfix">
+								<div class="left">
+									<img src="img/home_southafrica.jpg" alt="">
+								</div>
+								<div class="right">
+									<h4>South Africa</h4>
+									<div class="rate">
+										<i class="fa fa-icon-star icon-color"></i>
+										<i class="fa fa-icon-star icon-color"></i>
+										<i class="fa fa-icon-star icon-color"></i>
+										<i class="fa fa-icon-star icon-color"></i>
+										<i class="fa fa-icon-star icon-color-muted"></i>
+									</div>
+									<div class="deal_prise">
+										<a href="" class="prise_link">$189</a>
+										<span>/ per night</span>
+									</div>
+								</div>
+							</div>
+							<hr>
+							<div class="deal clearfix">
+								<div class="left">
+									<img src="img/home_sanfrancisco.jpg" alt="">
+								</div>
+								<div class="right">
+									<h4>Sun Francisco</h4>
+									<div class="rate">
+										<i class="fa fa-icon-star icon-color"></i>
+										<i class="fa fa-icon-star icon-color"></i>
+										<i class="fa fa-icon-star icon-color"></i>
+										<i class="fa fa-icon-star icon-color"></i>
+										<i class="fa fa-icon-star icon-color-muted"></i>
+									</div>
+									<div class="deal_prise">
+										<a href="" class="prise_link">$79</a>
+										<span>/ per night</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 				
-			</aside>
+			</section>
+			<footer>
+				<ul class="footer_menu">
+					<li><a href="#">Featers</a></li>
+					<li class="vertical_devider"><a href="#">Layouts</a></li>
+					<li class="vertical_devider"><a href="#">Blog</a></li>
+				</ul>
+				<div class="copyright">
+					<p>Built with HTML5 and CSS3 - Copyright © 2014 </p>
+					<p>Powered by <a href="#">Mistok</a></p>
+				</div>
+			</footer>	
+			
 
 		</div>
 		
