--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 		<title>Everest</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="../../css/Everest.css">
-		<link rel="stylesheet" href="../../css/Everest_media.css">
-		<link rel="stylesheet" href="../../img\icons\font-awesome-4.7.0\css\font-awesome.min.css">
-		<link rel="stylesheet" type="text/css" href="../../slick/slick.css"/>
-		<link rel="stylesheet" type="text/css" href="../../slick/slick-theme.css"/>
+		<link rel="stylesheet" href="css/Everest.css">
+		<link rel="stylesheet" href="css/Everest_media.css">
+		<link rel="stylesheet" href="img\icons\font-awesome-4.7.0\css\font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+		<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 	
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript" ></script>
-		<script src="../../slick/slick.js" type="text/javascript" ></script>
+		<script src="slick/slick.js" type="text/javascript" ></script>
 
 		<script type="text/javascript">
 			jQuery(document).ready(function($) {
@@ -44,9 +44,9 @@
 				<div id="left_coll" class="left_coll">
 					<div class="slider">
 						<div class="sl">
-							<div class="sl_slide"><img src="../../img/slider/home_slide01.jpg" alt="slide image"></div>
-							<div class="sl_slide"><img src="../../img/slider/home_slide02.jpg" alt="slide image"></div>
-							<div class="sl_slide"><img src="../../img/slider/home_slide03.jpg" alt="slide image"></div>
+							<div class="sl_slide"><img src="img/slider/home_slide01.jpg" alt="slide image"></div>
+							<div class="sl_slide"><img src="img/slider/home_slide02.jpg" alt="slide image"></div>
+							<div class="sl_slide"><img src="img/slider/home_slide03.jpg" alt="slide image"></div>
 						</div>
 					</div>
 					<div class="about">
@@ -195,7 +195,7 @@
 					<div class="toor1">
 						<div class="toor_content">
 							<div class="teaser">
-								<img src="../../img/home_prague.jpg" alt="teaser image">
+								<img src="img/home_prague.jpg" alt="teaser image">
 								<i></i>
 							</div>
 							<h2>Powered by Warp7</h2>
@@ -226,7 +226,7 @@
 					<div class="toor2">
 						<div class="toor_content">
 							<div class="teaser">
-								<img src="../../img/home_venice.jpg" alt="teaser image">
+								<img src="img/home_venice.jpg" alt="teaser image">
 								<i></i>
 							</div>
 							<h2>Built with UIkit</h2>
@@ -258,7 +258,7 @@
 				<div class="content">
 					<div class="toor1">
 						<div class="toor_image">
-							<img src="../../img/home_greece.jpg" alt="greece">
+							<img src="img/home_greece.jpg" alt="greece">
 						</div>
 						<div class="signUp">
 							<h3>Join the Newsletter</h3>
@@ -275,7 +275,7 @@
 							<h4>Our Best Deals</h4>
 							<div class="deal clearfix">
 								<div class="left">
-									<img src="../../img/home_newyork.jpg" alt="">
+									<img src="img/home_newyork.jpg" alt="">
 								</div>
 								<div class="right">
 									<h4>New York City</h4>
@@ -294,7 +294,7 @@
 							</div>
 							<div class="deal clearfix">
 								<div class="left">
-									<img src="../../img/home_southafrica.jpg" alt="">
+									<img src="img/home_southafrica.jpg" alt="">
 								</div>
 								<div class="right">
 									<h4>South Africa</h4>
@@ -314,7 +314,7 @@
 							<hr>
 							<div class="deal clearfix">
 								<div class="left">
-									<img src="../../img/home_sanfrancisco.jpg" alt="">
+									<img src="img/home_sanfrancisco.jpg" alt="">
 								</div>
 								<div class="right">
 									<h4>Sun Francisco</h4>
@@ -351,6 +351,6 @@
 
 		</div>
 		
-		<script src="../../js/Everest.js" type="text/javascript" ></script>
+		<script src="js/Everest.js" type="text/javascript" ></script>
 	</body>
 	</html>
