--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<title>Everest</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="css/Everest.css">
-		<link rel="stylesheet" href="css/Everest_media.css">
+		<link rel="stylesheet" href="css/everest.css">
+		<link rel="stylesheet" href="css/everest_media.css">
 		<link rel="stylesheet" href="img\icons\font-awesome-4.7.0\css\font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
 		<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
