--- a/index.html
+++ b/index.html
@@ -8,19 +8,7 @@
 		<link rel="stylesheet" href="css/everest_media.css">
 		<link rel="stylesheet" href="img\icons\font-awesome-4.7.0\css\font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-		<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
-	
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript" ></script>
-		<script src="slick/slick.js" type="text/javascript" ></script>
-
-		<script type="text/javascript">
-			jQuery(document).ready(function($) {
-				$('.search_form').click(function(event) {
-					$('.search').toggleClass('active');
-				});
-			});
-		</script>
-		
+		<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>		
 	</head>
 	<body>
 		<div class="wrapper">
@@ -351,6 +339,10 @@
 
 		</div>
 		
-		<script src="js/Everest.js" type="text/javascript" ></script>
+		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript" ></script>
+		<script src="slick/slick.js" type="text/javascript" ></script>
+		<script src="js/search.js"></script>
+		<script src="js/everest.js" type="text/javascript" ></script>
 	</body>
 	</html>
