--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		<link rel="stylesheet" href="img\icons\font-awesome-4.7.0\css\font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
 		<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>		
+		<link rel="stylesheet" type="text/css" href="date_picker/jquery.datetimepicker.min.css"/>		
+		
 	</head>
 	<body>
 		<div class="wrapper">
@@ -50,7 +52,7 @@
 							<label for="calendar">Check in</label>
 							<div class="input_container">
 								<i class="icon_calendar fa fa-calendar">
-									<input id='calendar' class="calendar" type="text">
+									<input id='calendar_in' class="calendar" type="text">
 								</i>
 							</div>
 						</div>
@@ -58,7 +60,7 @@
 							<label for="calendar">Check out</label>
 							<div class="input_container">
 								<i class="icon_calendar fa fa-calendar">
-									<input id='calendar' class="calendar " type="text">
+									<input id='calendar_out' class="calendar " type="text">
 								</i>
 							</div>
 						</div>
@@ -109,6 +111,155 @@
 				</div>
 			</section>
 			<section class="middle_section clearfix">
+				
+
+				<div class="content">
+					<div class="tour1">
+						<div class="tour_content">
+							<div class="teaser">
+								<img src="img/home_prague.jpg" alt="teaser image">
+								<i></i>
+							</div>
+							<h2>Powered by Warp7</h2>
+							<div class="rate">
+								<span>YOOtheme</span>
+								<i class="fa fa-icon-star icon-color"></i>
+								<i class="fa fa-icon-star icon-color"></i>
+								<i class="fa fa-icon-star icon-color"></i>
+								<i class="fa fa-icon-star icon-color"></i>
+								<i class="fa fa-icon-star icon-color-muted"></i>
+							</div>
+							<hr>
+							<p>The Warp framework provides a rich toolset for developing cross-platform themes, including support for LESS, a Customizer and its very own front-end framework UIkit.</p>
+							<p>
+								<span>Facility:</span>
+								<i class="fa fa-icon-credit-card icon-color-muted"></i>
+								<i class="fa fa-icon-cultury icon-color-muted"></i>
+								<i class="fa fa-icon-desctop icon-color-muted"></i>		
+							</p>
+							<hr>
+							<div class="prise clearfix">
+								<div class="sub_prise clearfix">
+									<h2>$99</h2>
+									<span>/ per night</span>
+								</div>
+								<a href="#">Book room</a>
+							</div>
+						</div>
+					</div>
+					<div class="tour2">
+						<div class="tour_content">
+							<div class="teaser">
+								<img src="img/home_venice.jpg" alt="teaser image">
+								<i></i>
+							</div>
+							<h2>Built with UIkit</h2>
+							<div class="rate">
+								<span>YOOtheme</span>
+								<i class="fa fa-icon-star icon-color"></i>
+								<i class="fa fa-icon-star icon-color"></i>
+								<i class="fa fa-icon-star icon-color"></i>
+								<i class="fa fa-icon-star icon-color"></i>
+								<i class="fa fa-icon-star icon-color-muted"></i>
+							</div>
+							<hr>
+							<p>A lightweight and modular front-end framework for developing fast and powerful web interfaces. It is open source and MIT licensed and you are free to use without any limitations.</p>
+							<p>
+								<span>Facility:</span> 
+								<i class="fa fa-icon-credit-card icon-color-muted"></i>
+								<i class="fa fa-icon-cultury icon-color-muted"></i>
+								<i class="fa fa-icon-desctop icon-color-muted"></i>			
+							</p>
+							<hr>
+							<div class="prise clearfix">
+								<div class="sub_prise clearfix">
+									<h2>$119</h2>
+									<span>/ per night</span>
+								</div>
+								<a href="#">Book room</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="content">
+					<div class="tour1">
+						<div class="tour_image">
+							<img src="img/home_greece.jpg" alt="greece">
+						</div>
+						<div class="signUp">
+							<h3>Join the Newsletter</h3>
+							<span>Sign up for the newsletter</span>
+							<form action="" class="signUp_form">
+								<input class="signUp_addres" type="text" value="Your E-Mail..">
+								<input class="signUp_addres_submit"type="submit" value="Sing Up">
+							</form>
+						</div>
+					</div>
+					<div class="tour2">
+						<div class="tour_content">
+							<div class="favorit"></div>
+							<h4>Our Best Deals</h4>
+							<div class="deal clearfix">
+								<div class="left">
+									<img src="img/home_newyork.jpg" alt="">
+								</div>
+								<div class="right">
+									<h4>New York City</h4>
+									<div class="rate">
+										<i class="fa fa-icon-star icon-color"></i>
+										<i class="fa fa-icon-star icon-color"></i>
+										<i class="fa fa-icon-star icon-color"></i>
+										<i class="fa fa-icon-star icon-color"></i>
+										<i class="fa fa-icon-star icon-color-muted"></i>
+									</div>
+									<div class="deal_prise">
+										<a href="" class="prise_link">$299</a>
+										<span>/ per night</span>
+									</div>
+								</div>
+							</div>
+							<div class="deal clearfix">
+								<div class="left">
+									<img src="img/home_southafrica.jpg" alt="">
+								</div>
+								<div class="right">
+									<h4>South Africa</h4>
+									<div class="rate">
+										<i class="fa fa-icon-star icon-color"></i>
+										<i class="fa fa-icon-star icon-color"></i>
+										<i class="fa fa-icon-star icon-color"></i>
+										<i class="fa fa-icon-star icon-color"></i>
+										<i class="fa fa-icon-star icon-color-muted"></i>
+									</div>
+									<div class="deal_prise">
+										<a href="" class="prise_link">$189</a>
+										<span>/ per night</span>
+									</div>
+								</div>
+							</div>
+							<hr>
+							<div class="deal clearfix">
+								<div class="left">
+									<img src="img/home_sanfrancisco.jpg" alt="">
+								</div>
+								<div class="right">
+									<h4>Sun Francisco</h4>
+									<div class="rate">
+										<i class="fa fa-icon-star icon-color"></i>
+										<i class="fa fa-icon-star icon-color"></i>
+										<i class="fa fa-icon-star icon-color"></i>
+										<i class="fa fa-icon-star icon-color"></i>
+										<i class="fa fa-icon-star icon-color-muted"></i>
+									</div>
+									<div class="deal_prise">
+										<a href="" class="prise_link">$79</a>
+										<span>/ per night</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 				<aside class="right">
 					<nav class="side_nav">
 						<ul>
@@ -178,151 +329,6 @@
 					</div>
 
 				</aside>
-
-				<div class="content">
-					<div class="toor1">
-						<div class="toor_content">
-							<div class="teaser">
-								<img src="img/home_prague.jpg" alt="teaser image">
-								<i></i>
-							</div>
-							<h2>Powered by Warp7</h2>
-							<div class="rate">
-								<span>YOOtheme</span>
-								<i class="fa fa-icon-star icon-color"></i>
-								<i class="fa fa-icon-star icon-color"></i>
-								<i class="fa fa-icon-star icon-color"></i>
-								<i class="fa fa-icon-star icon-color"></i>
-								<i class="fa fa-icon-star icon-color-muted"></i>
-							</div>
-							<hr>
-							<p>The Warp framework provides a rich toolset for developing cross-platform themes, including support for LESS, a Customizer and its very own front-end framework UIkit.</p>
-							<p>
-								<span>Facility:</span>
-								<i class="fa fa-icon-credit-card icon-color-muted"></i>
-								<i class="fa fa-icon-cultury icon-color-muted"></i>
-								<i class="fa fa-icon-desctop icon-color-muted"></i>		
-							</p>
-							<hr>
-							<div class="prise clearfix">
-								<h2>$99</h2>
-								<span>/ per night</span>
-								<a href="#">Book room</a>
-							</div>
-						</div>
-					</div>
-					<div class="toor2">
-						<div class="toor_content">
-							<div class="teaser">
-								<img src="img/home_venice.jpg" alt="teaser image">
-								<i></i>
-							</div>
-							<h2>Built with UIkit</h2>
-							<div class="rate">
-								<span>YOOtheme</span>
-								<i class="fa fa-icon-star icon-color"></i>
-								<i class="fa fa-icon-star icon-color"></i>
-								<i class="fa fa-icon-star icon-color"></i>
-								<i class="fa fa-icon-star icon-color"></i>
-								<i class="fa fa-icon-star icon-color-muted"></i>
-							</div>
-							<hr>
-							<p>A lightweight and modular front-end framework for developing fast and powerful web interfaces. It is open source and MIT licensed and you are free to use without any limitations.</p>
-							<p>
-								<span>Facility:</span> 
-								<i class="fa fa-icon-credit-card icon-color-muted"></i>
-								<i class="fa fa-icon-cultury icon-color-muted"></i>
-								<i class="fa fa-icon-desctop icon-color-muted"></i>			
-							</p>
-							<hr>
-							<div class="prise clearfix">
-								<h2>$119</h2>
-								<span>/ per night</span>
-								<a href="#">Book room</a>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="content">
-					<div class="toor1">
-						<div class="toor_image">
-							<img src="img/home_greece.jpg" alt="greece">
-						</div>
-						<div class="signUp">
-							<h3>Join the Newsletter</h3>
-							<span>Sign up for the newsletter</span>
-							<form action="" class="signUp_form">
-								<input class="signUp_addres" type="text" value="Your E-Mail..">
-								<input class="signUp_addres_submit"type="submit" value="Sing Up">
-							</form>
-						</div>
-					</div>
-					<div class="toor2">
-						<div class="toor_content">
-							<div class="favorit"></div>
-							<h4>Our Best Deals</h4>
-							<div class="deal clearfix">
-								<div class="left">
-									<img src="img/home_newyork.jpg" alt="">
-								</div>
-								<div class="right">
-									<h4>New York City</h4>
-									<div class="rate">
-										<i class="fa fa-icon-star icon-color"></i>
-										<i class="fa fa-icon-star icon-color"></i>
-										<i class="fa fa-icon-star icon-color"></i>
-										<i class="fa fa-icon-star icon-color"></i>
-										<i class="fa fa-icon-star icon-color-muted"></i>
-									</div>
-									<div class="deal_prise">
-										<a href="" class="prise_link">$299</a>
-										<span>/ per night</span>
-									</div>
-								</div>
-							</div>
-							<div class="deal clearfix">
-								<div class="left">
-									<img src="img/home_southafrica.jpg" alt="">
-								</div>
-								<div class="right">
-									<h4>South Africa</h4>
-									<div class="rate">
-										<i class="fa fa-icon-star icon-color"></i>
-										<i class="fa fa-icon-star icon-color"></i>
-										<i class="fa fa-icon-star icon-color"></i>
-										<i class="fa fa-icon-star icon-color"></i>
-										<i class="fa fa-icon-star icon-color-muted"></i>
-									</div>
-									<div class="deal_prise">
-										<a href="" class="prise_link">$189</a>
-										<span>/ per night</span>
-									</div>
-								</div>
-							</div>
-							<hr>
-							<div class="deal clearfix">
-								<div class="left">
-									<img src="img/home_sanfrancisco.jpg" alt="">
-								</div>
-								<div class="right">
-									<h4>Sun Francisco</h4>
-									<div class="rate">
-										<i class="fa fa-icon-star icon-color"></i>
-										<i class="fa fa-icon-star icon-color"></i>
-										<i class="fa fa-icon-star icon-color"></i>
-										<i class="fa fa-icon-star icon-color"></i>
-										<i class="fa fa-icon-star icon-color-muted"></i>
-									</div>
-									<div class="deal_prise">
-										<a href="" class="prise_link">$79</a>
-										<span>/ per night</span>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				
 			</section>
 			<footer>
 				<ul class="footer_menu">
@@ -344,5 +350,20 @@
 		<script src="slick/slick.js" type="text/javascript" ></script>
 		<script src="js/search.js"></script>
 		<script src="js/everest.js" type="text/javascript" ></script>
+		<script src="date_picker/jquery.datetimepicker.full.js" type="text/javascript" ></script>
+		<script type="text/javascript">
+			$("#calendar_in").datetimepicker({
+				timepicker:false,
+ 				format:'d.m.Y'
+			});
+
+		</script>
+		<script type="text/javascript">
+			$("#calendar_out").datetimepicker({
+				timepicker:false,
+ 				format:'d.m.Y'
+			});
+
+		</script>
 	</body>
 	</html>
