--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
 									<label for="children">children</label>
 									<div class="select_container">
 										<select name="children" id="children" class="children">
-											<option value="1" class="children_quantity">1</option>
-											<option value="2" class="children_quantity">2</option>
-											<option value="3" class="children_quantity">3</option>
-											<option value="4" class="children_quantity">4</option>
-											<option value="5" class="children_quantity">5</option>
+											<option value="1">1</option>
+											<option value="2">2</option>
+											<option value="3">3</option>
+											<option value="4">4</option>
+											<option value="5">5</option>
 										</select>
 										<i class="fa-caret-down"></i>
 									</div>
