--- a/index.html
+++ b/index.html
@@ -59,17 +59,15 @@
 							<div class="form_row">
 								<label for="calendar">Check in</label>
 								<div class="input_container">
-									<i class="icon_calendar fa fa-calendar">
-										<input id='calendar_in' class="calendar" type="text">
-									</i>
+									<i class="icon_calendar fa fa-calendar"></i>
+									<input id='calendar_in' class="calendar" type="text">				
 								</div>
 							</div>
 							<div class="form_row">
 								<label for="calendar">Check out</label>
 								<div class="input_container">
-									<i class="icon_calendar fa fa-calendar">
-										<input id='calendar_out' class="calendar " type="text">
-									</i>
+									<i class="icon_calendar fa fa-calendar"></i>
+									<input id='calendar_out' class="calendar " type="text">
 								</div>
 							</div>
 							<div class="form_row">
@@ -292,11 +290,11 @@
 							</a>
 						</div>
 						<div class="weather">
-							<div class="weather_now">
+							<div class="weather_now clearfix">
 								<div class="weather_top">23°</div>
 								<div class="weather_top"><i class="fa fa-cloud"></i></div>
-								<div class="weather_bottom">Monday 27th</div>
-								<div class="weather_bottom">4mph / 7h</div>
+								<div class="weather_bottom left">Monday 27th</div>
+								<div class="weather_bottom right">4mph / 7h</div>
 							</div>
 							<hr>
 							<div class="weather_week">
